# cuda11.7-gptj-training

./: .gitignore  .gitlab-ci.yml  .python-version  Dockerfile  README.md  README_CICD.md  build.sh  config.py  manager-config.yaml  manager.py  nvidia_entrypoint.sh  push_readme.sh  pyproject.toml  pyrightconfig.json  shipitdata.py  util.sh  utils.py
doc/: README-arm64.md  README-ppc64le.md  README-x86_64.md  README.md  dev.md  support-policy.md  supported-tags.md  unsupported-tags.md
entrypoint.d/: 10-banner.sh  12-banner.sh  15-container-copyright.txt  50-gpu-driver-check.sh  80-internal-image.sh  90-deprecated-image.sh
manifests/: cuda.yaml  manifest.yaml.old  rc-push-repos.yml
templates/doc/: README.md.jinja  supported-tags.md.Jinja  unsupported-tags.md.Jinja
templates/gitlab/: gitlab-ci.yml.jinja
templates/redhat/: base-dockerfile.j2  cudnn-dockerfile.j2  devel-dockerfile.j2  runtime-dockerfile.j2
templates/ubuntu/: base-dockerfile.j2  cudnn-dockerfile.j2  devel-dockerfile.j2  runtime-dockerfile.j2
tensorrt_runtime_test_dir_DO_NOT_DELETE/: Dockerfile  copy_to_ngc_staging.sh
tensorrt_test_dir_DO_NOT_DELETE/: Dockerfile  cudnn.json
test/: 00-nvidia-smi.bats  01-samples.bats  02-ld-library-path.bats  03-tools.bats  04-install.bats  05-arch.bats  06-check-nvidia-require-cuda.bats  07-nccl.bats  08-cudnn7.bats  09-cudnn8.bats  99-docker-rm.bats  helpers.bash
test/scripts/: run_tests.sh
test_manager/: test_cuda_keyring.py  test_gitlab.py  test_manager.py  test_shipitdata.py  test_supported_platforms.py  test_utils.py
(+20 files in other folders)
